# rust-hexagonal-architecture

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yml  diesel.toml  requests.http
apps/: Cargo.toml
apps/src/: guard.rs  handlers.rs  main.rs  responders.rs
apps/src/controllers/: users.rs
apps/src/controllers/users/: criteria.rs  delete.rs  find.rs  register.rs  update.rs
apps/src/responders/: problem_detail.rs
contexts/: Cargo.toml
contexts/src/shared/: domain.rs
contexts/src/shared/domain/: criteria.rs  regex.rs
contexts/src/shared/domain/criteria/: filter.rs  order.rs
contexts/src/shared/infrastructure/: dependency_container.rs
contexts/src/users/: application.rs  domain.rs  infrastructure.rs
contexts/src/users/application/: criteria.rs  delete.rs  find.rs  register.rs  update.rs  user_register_service.rs
contexts/src/users/domain/: user_id.rs  user_repository.rs  users.rs
contexts/src/users/domain/users/: user_criteria_repository.rs  user_email.rs  user_id.rs  user_name.rs  user_password.rs  user_repository.rs
contexts/src/users/infrastructure/: diesel.rs  sqlite.rs
contexts/src/users/infrastructure/diesel/: models.rs  schema.rs
contexts/src/users/infrastructure/sqlite/: container.rs  criteria_sqlite.rs  mappers.rs  user_criteria_repository_sqlite.rs  user_repository_sqlite.rs
contexts/src/users/intrastructure/diesel/: schema.rs
migrations/2024-06-27-150915_create_users/: up.sql
src/: application.rs  controllers.rs  main.rs
src/application/: user_register_service.rs
src/controllers/: guard.rs  handlers.rs  responders.rs  users.rs
src/controllers/responders/: problem_detail.rs
src/domain/: user_repository.rs  users.rs
src/infrastructure/: sqlite.rs
src/infrastructure/sqlite/: user_repository_sqlite.rs
