[package]
name = "restful"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid = { version = "1.8.0", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
argon2 = { version = "0.5.3" }
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.59"
anyhow = "1.0.82"
utoipa = { version = "4.2.0", features = ["rocket_extras"] }
sqlite = "0.36.0"