[workspace]
resolver = "2"
members = [
    "apps",
    "contexts"
]

[workspace.dependencies]
rocket = { version = "0.5.0", features = ["json"] }
utoipa = { version = "4.2.0", features = ["rocket_extras"] }

shaku = ">= 0.5.0, < 0.7.0"
shaku_rocket = "0.7.0-rc.1"

uuid = { version = "1.8.0", features = ["serde"] }

serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

argon2 = { version = "0.5.3" }

validator = { version = "0.18.1", features = ["derive"] }

thiserror = "1.0.59"
anyhow = "1.0.82"

sqlite = "0.36.0"
