[workspace]
resolver = "2"
members = [
    "apps",
    "contexts"
]

[workspace.dependencies]
rocket = { version = "0.5.0", features = ["json"] }
utoipa = { version = "4.2.0", features = ["rocket_extras"] }

shaku = ">= 0.5.0, < 0.7.0"
shaku_rocket = "0.7.0"

uuid = { version = "1.8.0", features = ["serde", "v7"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = { version = "1.10.4", features = ["std", "perf"] }

serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

argon2 = { version = "0.5.3" }
password-hash = { version = "0.5.0", features = ["getrandom", "rand_core", "std"] }

garde = { version = "0.19.0", features = ["derive", "regex", "email", "serde"] }

thiserror = "1.0.59"
anyhow = "1.0.82"

sqlite = "0.36.0"

dotenvy = { version = "0.15.7" }
dotenvy_macro = { version = "0.15.7" }
