[package]
name = "contexts"
version = "0.1.0"
edition = "2021"

[dependencies]
shaku.workspace = true

uuid.workspace = true
chrono.workspace = true
regex.workspace = true

serde.workspace = true
serde_json.workspace = true

argon2.workspace = true
password-hash.workspace = true

validator.workspace = true

thiserror.workspace = true
anyhow.workspace = true

sqlite.workspace = true
regex = "1.10.4"

